fix button / input color on safari, add favicon, site description

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,3 +28,9 @@ button{
 .pointer{
   cursor: pointer;
 }
+input,
+option,
+select,
+button{
+  color: black;
+}
