--- a/client/src/styles/PackageSearch.css
+++ b/client/src/styles/PackageSearch.css
@@ -61,6 +61,7 @@
   border-radius: 5px;
   border: 1px solid black;
   min-width: max-content;
+  padding: 3px;
 }
 .search-terms{
   width: 100%;
